--- a/src/app/confirm-duplicate/confirm-duplicate.component.html
+++ b/src/app/confirm-duplicate/confirm-duplicate.component.html
@@ -2,18 +2,18 @@
   <img class="close-btn" (click)="dialogRef.close('cancel')" src="/assets/icons/tools/x-close.svg" alt="Close Modal">
   <div class="modals-body">
     <div class="modals-header">
-      <span>Duplicate this design</span>
+      <span>Duplicate this {{orderType}}</span>
       <span></span>
     </div>
     <div class="modals-inputs" *ngIf="!saving">
-      <p>This design has been submitted for a quote and can not be editted.</p>
-      <p>Duplicating this design as your own will allow you to edit it and submit a new quote request.</p>
+      <p>This {{orderType}} has been submitted for a quote and can not be editted.</p>
+      <p>Duplicating this {{orderType}} as your own will allow you to edit it and submit a new quote request.</p>
     </div>
     <div class="modals-action-btns">
       <div class="action-btns">
         <span appStyledButton='primary-right-large'>
           <button (click)="confirmDuplicate()">
-            <span>Duplicate Design</span>
+            <span>Duplicate</span>
           </button>
         </span>
       </div>
