--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -26,6 +26,7 @@
             <button (click)="this.seeyond.downloadImages()">Download Image</button>
           </span>
         </span>
+        <span class="view-type" *ngIf="feature.isDuplicating">Duplicating from ID {{feature.id}}</span>
         <span class="right view-type" *ngIf="feature.feature_type !=='seeyond'">
           {{designViewType}}
         </span>
@@ -49,7 +50,7 @@
         <span class="sub-header">{{seeyond.dimensionsString}}</span>
       </span>
       <span *ngIf="!!seeyond.isDuplicating" class="sub-header">
-        Duplicating Seeyond ID {{seeyond.id}}
+        Duplicating from id {{seeyond.id}}
       </span>
     </div>
   </div>
@@ -125,7 +126,7 @@
               <button (click)="viewDetails()">Details</button>
             </span>
             <span appStyledButton='secondary-left'>
-              <button (click)="duplicateDesign()">Duplicate Design</button>
+              <button (click)="duplicateDesign()">Duplicate</button>
             </span>
           </span>
         </div>
