--- a/src/app/design/right-components/design-design/design-design.component.html
+++ b/src/app/design/right-components/design-design/design-design.component.html
@@ -66,7 +66,7 @@
             </div>
           </div>
         <!-- </mat-tab> -->
-        <!-- TODO: RESTORE FOR OLD DESIGNS? -->
+        <!-- TODO: RESTORE FOR OLD DESIGNS? Leaving this here in case they want it back after it's gone.-->
         <!-- <mat-tab label="Varia">
           <div class="velo-materials-container" *ngIf="materials.varia">
             <div *ngFor="let varia of materials.varia.color | keys last as isLast" (click)="feature.updateSelectedMaterial(varia.material, varia.hex, 'varia')">
